# android

./: .dockerignore  .gitignore  AI.md  ALL_FILES_COMPLETE.md  AUDIT.AI.md  BINARY_NAMING_CORRECTED.md  BUILD_ANALYSIS_COMPLETE.md  BUILD_COMPLETE.md  BUILD_ERRORS_FIXED.md  BUILD_READY_CONFIRMATION.md  BUILD_STATUS_FIXED.md  CHANGELOG.md  CLAUDE.md  DELIVERY_COMPLETE.md  Dockerfile  EMAIL_CORRECTED.md  FDROID_SYNC_VERIFIED.md  FEATURES_AUDIT.md  FINAL_DELIVERY_CONFIRMATION.md  FINAL_DELIVERY_STATUS.md  FINAL_STATUS_ALL_FIXED.md  FINAL_STATUS_CONFIRMED.md  FINAL_STATUS_v1.0.0.md  FIXES_APPLIED.md  IDEA.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE.md  Makefile  PLAN.AI.md  PLAN.md  PRODUCTION_READY_REPORT.md  PROJECT_SUMMARY.md  QR_PAIRING.md  README.md  RELEASE_NOTES.md  RELEASE_READY.md  SPEC.md  SPEC_VALIDATION_REPORT.md  SUMMARY.md  (+10 more)
.claude/: RULES.md  settings.local.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android-ci.yml  build-toolchain.yml  ci.yml  dev-builds.yml  development-builds.yml  mosh-binaries.yml  release.yml
.gradle-cache/caches/8.11.1/cc-keystore/: cache.properties
.gradle-cache/caches/journal-1/: file-access.properties
.gradle-cache/kotlin-profile/: 68d31fd3-0aac-4708-a9ea-1fb7865c7714.profile  a9760149-54ba-4560-ada0-8111c38caf16.profile  c7216a6b-2211-429b-b86d-1e6caacc0a7a.profile  f819d505-39c8-4767-a562-cb2437c77d1a.profile
app/: build.gradle  lint.xml  proguard-fdroid.pro  proguard-rules.pro
app/schemas/io.github.tabssh.storage.database.TabSSHDatabase/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  4.json  5.json  6.json
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: whats_new.md
app/src/main/assets/fonts/: README.md
app/src/main/cpp/: CMakeLists.txt  spice_client.c  spice_client_glib.c  spice_stub.c
app/src/main/res/drawable/: bg_bottom_sheet_handle.xml  bg_host_count_chip.xml  bg_status_dot.xml  connection_status_disconnected.xml  connection_status_indicator.xml  high_contrast_background.xml  ic_accessibility.xml  ic_arrow_up.xml  ic_bookmark.xml  ic_clear.xml  ic_code.xml  ic_computer.xml  ic_computer_local.xml  ic_computer_secure.xml  ic_connected.xml  ic_connecting.xml  ic_connection.xml  ic_disconnect.xml  ic_download.xml  ic_error.xml  ic_expand_less.xml  ic_expand_more.xml  ic_file.xml  ic_file_archive.xml  ic_file_executable.xml  ic_file_generic.xml  ic_file_image.xml  ic_file_link.xml  ic_file_text.xml  ic_flash.xml  ic_help.xml  ic_import_export.xml  ic_info.xml  ic_interface.xml  ic_keyboard.xml  ic_notification.xml  ic_paste.xml  ic_radio_checked.xml  ic_refresh.xml  ic_save.xml  (+14 more)
app/src/main/res/layout/: activity_audit_log_viewer.xml  activity_cloud_accounts.xml  activity_cloud_manager.xml  activity_cluster_command.xml  activity_connection_edit.xml  activity_crash_report.xml  activity_group_management.xml  activity_hypervisor_accounts.xml  activity_hypervisor_edit.xml  activity_identity_management.xml  activity_import_export.xml  activity_import_from_qr.xml  activity_key_management.xml  activity_keyboard_customization.xml  activity_libvirt_manager.xml  activity_log_viewer.xml  activity_main.xml  activity_main_old.xml  activity_multi_host_dashboard.xml  activity_oci_manager.xml  activity_oci_onboarding.xml  activity_port_forwarding.xml  activity_proxmox_manager.xml  activity_settings.xml  activity_sftp.xml  activity_snippet_manager.xml  activity_sync_settings.xml  activity_tab_terminal.xml  activity_transcript_viewer.xml  activity_vm_console.xml  activity_vmware_manager.xml  (+85 more)
config/: dependency-check-suppressions.xml
docker/: Dockerfile  Dockerfile.build  docker-compose.dev.yml  docker-compose.yml
docker/test-sshd/: Dockerfile  entrypoint.sh
docs/: BUILD_STATUS.md  CHANGELOG-v1.1.0.md  CLEANUP_PLAN.md  DELIVERY_100_PERCENT_COMPLETE.md  FINAL_STATUS.md  LIBRARY_COMPARISON.md  TODO.md  UI_UX_GUIDE.md
fdroid-submission/: COMPLIANCE_CHECKLIST.md  FDROID_SUBMISSION_GUIDE.md  FDROID_SUBMISSION_v1.0.0.md  LICENSE.md  README.md  RFP_SUBMISSION.md  SPEC.md  com.tabssh.yml  io.github.tabssh.yml
libs/spice/: README.md
metadata/: com.tabssh.yml  io.github.tabssh.yml
metadata/en-US/: full_description.txt  short_description.txt
metadata/en-US/changelogs/: 1.txt
mosh/: Dockerfile  build-android.sh
scripts/: README.md  android-emulator.sh  build-and-validate.sh  clean-build.sh  comprehensive-validation.sh  dev-shell.sh  fetch-fonts.sh  fetch-mosh-binaries.sh  generate-keystore.sh  install-to-device.sh  notify-release.sh  pre-commit-check.sh  prepare-fdroid-submission.sh  start-test-sshd.sh  test-build.sh  ui-test.sh  validate-implementation.sh
scripts/check/: dev-shell.sh  docker-check-errors.sh  get-errors.sh  get-unique-errors.sh  quick-check.sh
scripts/docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml
scripts/fix/: comprehensive-fix.sh  docker-fast-compile.sh  docker-final-build.sh  docker-fix-errors.sh  docker-fix-terminal.sh  docker-quick-build.sh  final_fix.sh  fix_all_compilation_errors.sh  fix_all_errors.sh  fix_compilation_errors.sh  fix_final_errors.sh
(+1331 files in other folders)
